samples/_failures_safe/1761350967_fa8f2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5085dfa0.c: In function ‘main’:
./samples/SAFE/__tmp_5085dfa0.c:161:88: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  161 |     if (decompressed_len != (size_t)input_len || memcmp(input_data, decompressed_data, input
      |                                                                                        ^~~~~
      |                                                                                        int
./samples/SAFE/__tmp_5085dfa0.c:161:88: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5085dfa0.c:161:93: error: expected ‘)’ at end of input
  161 |     if (decompressed_len != (size_t)input_len || memcmp(input_data, decompressed_data, input
      |                                                        ~                                    ^
      |                                                                                             )
./samples/SAFE/__tmp_5085dfa0.c:161:5: error: expected declaration or statement at end of input
  161 |     if (decompressed_len != (size_t)input_len || memcmp(input_data, decompressed_data, input
      |     ^~
